# juno-addrgen

./: .gitignore  README.md  go.mod
.github/workflows/: release.yml
cmd/juno-addrgen/: main.go
internal/cli/: cli.go  cli_test.go
internal/e2e/: cli_test.go
internal/ffi/: addrgen.go
pkg/addrgen/: addrgen.go  addrgen_test.go
rust/addrgen/: Cargo.toml
rust/addrgen/include/: juno_addrgen.h
rust/addrgen/src/: lib.rs  zip316.rs
